--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@editorjs/table",
+  "name": "@bfrow-tech/table",
+  "publishConfig": { 
+    "registry": "https://npm.pkg.github.com/bfrow-tech" 
+  },
   "description": "Table for Editor.js",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "license": "MIT",
   "main": "./dist/bundle.js",
   "scripts": {
@@ -9,10 +12,10 @@
     "build:dev": "webpack --mode development --watch",
     "lint": "./node_modules/.bin/eslint"
   },
-  "repository": "https://github.com/editor-js/table",
+  "repository": "git://github.com/bfrow-tech/table.git",
   "author": {
-    "name": "CodeX Team",
-    "email": "team@ifmo.su"
+    "name": "BFrow Team",
+    "email": "roman.irinin@bfrow.com"
   },
   "keywords": [
     "codex",
